--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "psr-4": {
             "Anax\\": "src/",
             "Lii\\": "src/"
-        }
+        },
+        "files": ["src/function.php"]
     },
     "require": {
-        "anax/anax-oophp-me": "^2.0.0"
+        "anax/anax-oophp-me": "^2.0.0",
+        "anax/database": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
